--- a/jpa-study/pom.xml
+++ b/jpa-study/pom.xml
@@ -49,6 +49,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
