--- a/jpa-study/.gitignore
+++ b/jpa-study/.gitignore
@@ -14,7 +14,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -31,3 +31,5 @@ build/
 
 ### VS Code ###
 .vscode/
+
+/.idea/
