--- a/toyproject1/src/main/resources/application.properties
+++ b/toyproject1/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:h2:tcp://localhost/~/toyproject
 spring.datasource.username=sa
 spring.datasource.password=
 
+# spring devtools
 
 # H2 설정
 spring.h2.console.enabled=true
@@ -21,3 +22,11 @@ logging.level.org.hibernate.SQL=debug
 
 # 포트번호 변경
 server.port=8181
+
+
+# Thymeleaf 설정
+spring.thymeleaf.cache=false
+spring.devtools.restart.enabled=false
+spring.devtools.livereload.enabled=true
+
+# Spring security
