validator study !! webdatabinder, @Validated

--- a/mvc2/validation/src/main/resources/application.properties
+++ b/mvc2/validation/src/main/resources/application.properties
@@ -2,4 +2,5 @@
 server.port=8080
 
 #message
-spring.messages.basename=messages,errors
+spring.messages.basename=errors,messages
+spring.messages.encoding=UTF-8
