--- a/React_start/study_by_book/package.json
+++ b/React_start/study_by_book/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "include-media": "^1.4.10",
+    "open-color": "^1.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.9",
+    "scss": "^0.2.4",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
