--- a/React_start/study_by_book/package.json
+++ b/React_start/study_by_book/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.3.1",
     "include-media": "^1.4.10",
     "open-color": "^1.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "scss": "^0.2.4",
