--- a/React_start/study_by_book/package.json
+++ b/React_start/study_by_book/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-virtualized": "^9.22.3",
     "sass": "^1.49.9",
     "scss": "^0.2.4",
     "styled-components": "^5.3.5",
