--- a/React_start/study_by_book/package.json
+++ b/React_start/study_by_book/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
+    "immer": "^9.0.12",
     "include-media": "^1.4.10",
     "open-color": "^1.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-virtualized": "^9.22.3",
     "sass": "^1.49.9",
