--- a/React_start/study_by_book/package.json
+++ b/React_start/study_by_book/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "immer": "^9.0.12",
     "include-media": "^1.4.10",
