--- a/React_start/study_by_book/package.json
+++ b/React_start/study_by_book/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-virtualized": "^9.22.3",
+    "redux": "^4.1.2",
     "sass": "^1.49.9",
     "scss": "^0.2.4",
     "styled-components": "^5.3.5",
