--- a/React_start/study_by_book/package.json
+++ b/React_start/study_by_book/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.7",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-virtualized": "^9.22.3",
