--- a/mybatis-test/src/test/resources/test.properties
+++ b/mybatis-test/src/test/resources/test.properties
@@ -17,3 +17,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.example.mybatistest.biz
 # Mybatis mapper \uC704\uCE58 \uC124\uC815
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+# \uD14C\uC2A4\uD2B8\uC6A9 \uC0DD\uC131
+spring.main.allow-bean-definition-overriding=true
