--- a/node_study/express/package.json
+++ b/node_study/express/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "json-web-token": "^3.2.0",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.16",
     "prisma": "^3.14.0",
     "pug": "2.0.0-beta11",
     "yarn": "^1.22.18"
