--- a/Spring/jdbc2/source/itemservice-db/src/main/resources/application.properties
+++ b/Spring/jdbc2/source/itemservice-db/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:tcp://localhost/~/jdbc
 spring.datasource.username=sa
 spring.datasource.password=
+
+#jdbcTemplate sql log
+logging.level.org.springframework.jdbc=debug
