--- a/Spring/jdbc2/source/itemservice-db/src/test/resources/application.properties
+++ b/Spring/jdbc2/source/itemservice-db/src/test/resources/application.properties
@@ -1,1 +1,8 @@
 spring.profiles.active=test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:tcp://localhost/~/jdbc-test
+spring.datasource.username=sa
+spring.datasource.password=
+
+#jdbcTemplate sql log
+logging.level.org.springframework.jdbc=debug
