--- a/Spring/jdbc2/source/itemservice-db/src/main/resources/application.properties
+++ b/Spring/jdbc2/source/itemservice-db/src/main/resources/application.properties
@@ -6,3 +6,13 @@ spring.datasource.password=
 
 #jdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
+
+#MyBatis
+mybatis.type-aliases-package=hello.itemservice.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.hello.itemservice.repository.mybatis=trace
+mybatis.mapper-locations:classpath:mapper/**/*.xml
+
+#JPA log
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
