--- a/Spring/jdbc2/source/itemservice-db/src/test/resources/application.properties
+++ b/Spring/jdbc2/source/itemservice-db/src/test/resources/application.properties
@@ -1,8 +1,19 @@
 spring.profiles.active=test
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:tcp://localhost/~/jdbc-test
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/jdbc
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 #jdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
+
+#MyBatis
+mybatis.type-aliases-package=hello.itemservice.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.hello.itemservice.repository.mybatis=trace
+
+mybatis.mapper-locations:classpath:mapper/**/*.xml
+
+#JPA log
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
