--- a/Spring/jdbc2/source/itemservice-db/build.gradle
+++ b/Spring/jdbc2/source/itemservice-db/build.gradle
@@ -37,9 +37,21 @@ dependencies {
 	//JPA, 스프링 데이터 JPA 추가
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+	// Querydsl 추가 시작
+	implementation 'com.querydsl:querydsl-jpa'
+
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+
 	//테스트에서 lombok 사용
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	//Querydsl 추가, 자동 생성된 Q클래스 gradle clean으로 제거
+	clean {
+		delete file('src/main/generated')
+	}
 }
 
 tasks.named('test') {
