log4jdbc 로 sql로그 남기기 추가

--- a/Spring/batch/build.gradle
+++ b/Spring/batch/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation 'com.h2database:h2:2.1.214'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
 
 }
 tasks.named('test') {
