--- a/Spring/batch/src/main/resources/application.yml
+++ b/Spring/batch/src/main/resources/application.yml
@@ -1,12 +1,20 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/test
+    #url: jdbc:h2:tcp://localhost/~/test
     username: sa
     password:
-    driver-class-name: org.h2.Driver
+    #driver-class-name: org.h2.Driver
+    url: jdbc:log4jdbc:h2:mem:test
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
   h2:
     console:
       enabled: true
+  sql:
+    init:
+      mode: always
 logging:
   level:
-    sql: debug
+    jdbc:
+      resultsettable: info
+      sqlonly: info
+
