배치 기본 키를 날짜로 변경

--- a/Spring/batch/src/main/resources/application.yml
+++ b/Spring/batch/src/main/resources/application.yml
@@ -14,9 +14,9 @@ spring:
       mode: always
   batch:
     jdbc:
-      initialize-schema: always
-#logging:
-#  level:
-#    jdbc:
-#      sqlonly: info
+      initialize-schema: never
+logging:
+  level:
+    log4jdbc: error
+
 
