--- a/JPA/jpashop/src/main/resources/application.yml
+++ b/JPA/jpashop/src/main/resources/application.yml
@@ -1,10 +1,20 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:tcp://localhost/~/test
+    url: jdbc:h2:tcp://localhost/~/jpashop
     username: sa
     password:
   h2:
     console:
       enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        #show_sql: true
+        format_sql: true
 
+logging:
+  level:
+    org.hibernate.SQL: debug
