java 버전 증가 11 -> 17

--- a/Spring/security/secu-before/src/main/resources/application.properties
+++ b/Spring/security/secu-before/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-# ????
+# 시큐리티 설정
 spring.security.user.name=user
 spring.security.user.password=1111
 
-# ??????
+# 스프링 데브툴
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
