--- a/Spring/spring-boot/start/external-read/src/main/resources/application.properties
+++ b/Spring/spring-boot/start/external-read/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+my.datasource.url=local.db.name
+my.datasource.username=local.db.user
+my.datasource.password=local.db.password
+my.datasource.etc.max-connection=10
+my.datasource.etc.timeout=3600ms
+my.datasource.etc.options=CACHE,ADMIN
