스프링에서 헤비쿼리 멀티쓰레드로 돌리는 것 테스트

--- a/Spring/spring-boot/start/actuator/src/main/resources/application.yml
+++ b/Spring/spring-boot/start/actuator/src/main/resources/application.yml
@@ -7,8 +7,8 @@ management:
     shutdown:
       enabled: true
     health:
-      show-components: always
-      # show-details: always
+      # show-components: always
+      show-details: always
   info:
     java:
       enabled: true
@@ -24,3 +24,8 @@ info:
   app:
     name: hello-actuator
     company: younglong
+
+logging:
+  level:
+    hello:
+      controller: debug
