알고리즘 연습

--- a/Spring/spring-boot/start/actuator/src/main/resources/application.yml
+++ b/Spring/spring-boot/start/actuator/src/main/resources/application.yml
@@ -16,8 +16,8 @@ management:
       enabled: true
     env:
       enabled: true
-    git:
-      mode: full
+#    git:
+#      mode: full
 
 
 info:
