--- a/Spring/spring-boot/start/actuator/src/main/resources/application.yml
+++ b/Spring/spring-boot/start/actuator/src/main/resources/application.yml
@@ -29,3 +29,9 @@ logging:
   level:
     hello:
       controller: debug
+
+# 톰캣 메트릭정보 추가로 활성화
+server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
