--- a/Spring/spring-boot/start/actuator/build.gradle
+++ b/Spring/spring-boot/start/actuator/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
     //test lombok 사용
     testCompileOnly 'org.projectlombok:lombok'
